# crewai

job_listing/: README.md  pyproject.toml
job_listing/src/job_listing/: crew.py  main.py
job_listing/src/job_listing/config/: agents.yaml  tasks.yaml
myproject/: README.md  pyproject.toml  report.md
myproject/src/myproject/: crew.py  main.py
myproject/src/myproject/config/: agents.yaml
