[project]
name = "job_listing"
version = "0.1.0"
description = "job-listing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
job_listing = "job_listing.main:run"
run_crew = "job_listing.main:run"
train = "job_listing.main:train"
replay = "job_listing.main:replay"
test = "job_listing.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
