[project]
name = "myproject"
version = "0.1.0"
description = "myproject using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
myproject = "myproject.main:run"
run_crew = "myproject.main:run"
train = "myproject.main:train"
replay = "myproject.main:replay"
test = "myproject.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
